--- a/post.html
+++ b/post.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="">
+    <header class="masthead" style="background-image: url('Images/Header 2.png');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
