--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="">
+    <header class="masthead" style="background-image: url('Images/About Header.png');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
