--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="">
+    <header class="masthead" style="background-image: url('Images/Header 1.png');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
