--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+            <a class="navbar-brand" href="index.html">Fun Web Dev Information</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -48,10 +48,10 @@
                         <a class="nav-link" href="/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/post.html">Sample Post</a>
+                        <a class="nav-link" href="/Post1.html">Sample Post</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Portfolio</a>
+                        <a class="nav-link" href="https://jackson-hollidays-portfolio.netlify.app/" target="_blank">Portfolio</a>
                     </li>
                 </ul>
             </div>
@@ -65,8 +65,8 @@
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
                     <div class="site-heading">
-                        <h1>Clean Blog</h1>
-                        <span class="subheading">A Blog Theme by Start Bootstrap</span>
+                        <h1>Facts for Web Development</h1>
+                        <span class="subheading">Simple facts on information that I find interesting</span>
                     </div>
                 </div>
             </div>
