--- a/Post1.html
+++ b/Post1.html
@@ -20,7 +20,7 @@
 
     <!-- Custom styles for this template -->
     <link href="Content/clean-blog.min.css" rel="stylesheet" />
-
+    <link href="/Content/Blogstyle.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -36,13 +36,13 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="/index.html">Home/Blog Set 1</a>
+                    </li>                    
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/BlogSet2.html">Blog Set 2</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/Post1.html">Sample Post</a>
+                        <a class="nav-link" href="/BlogSet3.html">Blog Set 3</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://jackson-hollidays-portfolio.netlify.app/" target="_blank">Portfolio</a>
