--- a/Post1.html
+++ b/Post1.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>The importance of designing for multiple devices</title>
+    <title>Designing for multiple devices</title>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/Images/apple-touch-icon.png">
