--- a/Post4.html
+++ b/Post4.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creating a custom favicon and consistent branding/theme</title>
+    <title>Favicon and consistent theme</title>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/Images/apple-touch-icon.png">
