--- a/Post2.html
+++ b/Post2.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Choosing a responsive template</title>
+    <title>Responsive template</title>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/Images/apple-touch-icon.png">
